--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nodejs Template project",
   "main": "index.js",
   "private": true,
-  "author": [],
+  "author": "surya jakhotia",
   "scripts": {
     "test": "mocha"
   },
